fix Bug 865139 - Reinstall summary page product URL is too short

--- a/tools/qa_hamsta/qa_hamsta/frontend/css/reinstall.css
+++ b/tools/qa_hamsta/qa_hamsta/frontend/css/reinstall.css
@@ -53,6 +53,14 @@ input.x {
   font-weight: bold;
 }
 
+.breadcrumb_bottom {
+  position: absolute;
+  text-align: right;
+  margin: 1.5em 0 0 -1em;
+  white-space: nowrap;
+}
+
+
 /* tabs - credits to css-tricks.com */
 div.tabs{
   margin-top: 3em;
@@ -103,7 +111,7 @@ div.breadcrumb label, input[type="radio"]+label, label:first-child {
 }
 
 input[type="text"].url  {
-  width : 20em;
+  width : 28em;
   
 }
 input[type="text"].regprefix  {
@@ -111,6 +119,15 @@ input[type="text"].regprefix  {
 }
 input[type="text"].regcode  {
   width:6em;
+}
+input[type="text"].additionalpatterns  {
+  width:20em;
+}
+input[type="text"].additionalrpms  {
+  width:20em;
+}
+input[type="text"].installopts  {
+  width:20em;
 }
 input[required]   {
   box-shadow: 0px 0px 3px #f00;
@@ -141,6 +158,7 @@ fieldset>span:after {
   content:':';
 }
 div.breadcrumb label:after,
+div.breadcrumb_bottom label:after,
 input[type="radio"] + label:after,
 input[type="checkbox"] + label:after,
 div.addon_btns label:after {
